Kubernetes/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: monitoring
  annotations:
    metallb.universe.tf/address-pool: "default-pool"
    metallb.universe.tf/loadBalancerIPs: "192.168.3.206"
spec:
  selector:
    app: uptime-kuma
  ports:
  - name: web
    port: 80
    targetPort: 3001
    protocol: TCP
